[Terry N.] run args now in prop file