@@ -594,11 +594,7 @@ their descpritions.
               classpathref="runtime.classpath"
               fork="true">
 
-	    <jvmarg line="${common.run.args}"/>
-            <jvmarg value="-Xdock:name=${product.shortname}"/>
-            <jvmarg value="-Dapple.awt.graphics.UseQuartz=true"/>
-            <jvmarg value="-Dapple.laf.useScreenMenuBar=true"/>
-            <jvmarg value="-Dapple.awt.brushMetalLook=true"/>
+	    <jvmarg line="${common.run.args} ${mac.run.args}"/>
             <arg value="${main.class}"/>
         </java>
     </target>
@@ -655,10 +651,7 @@ their descpritions.
               classpathref="runtime.classpath"
               fork="true">
             <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
-            <jvmarg line="${common.run.args}"/>
-            <jvmarg value="-Dapple.awt.graphics.UseQuartz=true"/>
-            <jvmarg value="-Dapple.laf.useScreenMenuBar=true"/>
-            <jvmarg line="--add-exports java.desktop/com.apple.eawt=ALL-UNNAMED"/>
+            <jvmarg line="${common.run.args} ${mac.run.args}"/>
 
             <!-- Any debug args can go here -->
             <!--arg value="localhost" />
